<resources>
    <string name="app_name">Weather Forecast</string>

    <!-- Fragments Labels -->
    <string name="home_label">Home</string>
    <string name="settings_label">Settings</string>
    <string name="fav_label">Favourites</string>
    <string name="alerts_label">Alerts</string>

    <!-- Home Screen -->
    <string name="today">Today %s</string>
    <string name="next_days">Next Days</string>
    <string name="today_label">Today</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="grant_permissions_toast">You should Grant Permissions</string>
    <string name="no_connection_toast">There is no connection</string>
    <!-- Initial Setup Dialog -->
    <string name="initial_setup">Initial Setup</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>

    <!-- Fav Screen -->
    <string name="add_fav_content_description">Add favourite</string>
    <string name="del_content_description">Delete</string>
    <string name="empty_fav">There is no favourites</string>
    <!-- Del Dialog -->
    <string name="dialog_del">Are you sure you want to delete this saved location?</string>
    <string name="dialog_del_ok">Delete</string>
    <string name="dialog_del_cancel">Cancel</string>

    <!-- Alarms Screen -->
    <string name="add_alarm_content_description">Add alarm</string>
    <string name="empty_alarm">There is no alarms</string>
    <!-- Del Dialog -->
    <string name="dialog_del_alarm">Are you sure you want to delete this saved alarm?</string>
    <!-- Alarm or Notification Dialog -->
    <string name="alarm_or_notifications_dialog_alarm">Alarm</string>
    <string name="alarm_or_notifications_dialog_notification">Notification</string>
    <!-- Label Dialog -->
    <string name="label_dialog_title">Set Message</string>
    <string name="label_dialog_edit_text_hint">Message</string>
    <string name="label_dialog_ok">OK</string>
    <string name="label_dialog_cancel">Cancel</string>

    <!-- Map Activity -->
    <string name="add_this_location_button">Add this location</string>

    <!-- Settings -->
    <string name="m_s">m/s</string>
    <string name="mi">mi</string>
    <string name="location_dialog_title">Location</string>
    <string name="temperature_dialog_title">Temperature</string>
    <string name="wind_speed_dialog_title">Wind Speed</string>
    <string name="language_dialog_title">Language</string>
    <!-- Settings Default Values -->
    <string name="location_default_value">GPS</string>
    <string name="temp_default_value">Celsius</string>
    <string name="wind_speed_default_value">Meter/Sec</string>
    <string name="lang_default_value">English</string>
    <!-- Settings Values -->
    <string name="pref_location_gps">GPS</string>
    <string name="pref_location_map">Map</string>
    <string name="pref_temp_celsius">Celsius</string>
    <string name="pref_temp_kelvin">Kelvin</string>
    <string name="pref_temp_fahrenheit">Fahrenheit</string>
    <string name="pref_wind_speed_meter">Meter/Sec</string>
    <string name="pref_wind_speed_mile">Mile/Hour</string>
    <string name="pref_language_english">English</string>
    <string name="pref_language_arabic">العربية</string>
    <!-- Settings Arrays -->
    <string-array name="pref_location">
        <item>GPS</item>
        <item>Map</item>
    </string-array>
    <string-array name="pref_language">
        <item>English</item>
        <item>العربية</item>
    </string-array>
    <string-array name="pref_temp">
        <item>Celsius</item>
        <item>Kelvin</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="pref_wind_speed">
        <item>Meter/Sec</item>
        <item>Mile/Hour</item>
    </string-array>
</resources>