<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mahmoudhamdyae.weatherforecast.presentation.home.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favFragment"
        android:name="com.mahmoudhamdyae.weatherforecast.presentation.favourites.FavFragment"
        android:label="@string/fav_label"
        tools:layout="@layout/fragment_fav" />
    <fragment
        android:id="@+id/alertsFragment"
        android:name="com.mahmoudhamdyae.weatherforecast.presentation.alerts.AlertsFragment"
        android:label="@string/alerts_label"
        tools:layout="@layout/fragment_alerts" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.mahmoudhamdyae.weatherforecast.presentation.settings.SettingsFragment"
        android:label="@string/settings_label"/>
</navigation>