<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mahmoudhamdyae.weatherforecast.presentation.home.HomeViewModel" />

        <variable
            name="today_adapter"
            type="com.mahmoudhamdyae.weatherforecast.presentation.home.TodayAdapter" />

        <variable
            name="next_days_adapter"
            type="com.mahmoudhamdyae.weatherforecast.presentation.home.NextDaysAdapter" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/location_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:isErrorNull="@{viewModel.uiState.error}"
                    app:isLoading="@{viewModel.uiState.isLoading}"
                    android:layout_margin="16dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Mansoura"/>

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:isErrorNull="@{viewModel.uiState.error}"
                    app:isLoading="@{viewModel.uiState.isLoading}"
                    android:layout_margin="16dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Fri,3 Nov"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/current_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:elevation="16dp"
                    app:cardCornerRadius="10dp"
                    app:isErrorNull="@{viewModel.uiState.error}"
                    app:isLoading="@{viewModel.uiState.isLoading}"
                    app:layout_constraintTop_toBottomOf="@id/location_name">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/current_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:time="@{viewModel.uiState.weather.currentWeatherData.time}"
                            tools:text="Today 16:00" />

                        <ImageView
                            android:id="@+id/current_image"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:contentDescription="@{viewModel.uiState.weather.currentWeatherData.weatherDesc}"
                            android:paddingBottom="8dp"
                            app:imageUrl="@{viewModel.uiState.weather.currentWeatherData.icon}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/current_time"
                            tools:layout_height="150dp"
                            tools:src="@tools:sample/backgrounds/scenic" />

                        <TextView
                            android:id="@+id/current_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="16dp"
                            android:text="@{viewModel.uiState.weather.currentWeatherData.temperatureCelsius + `°C` }"
                            android:textSize="50sp"

                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/current_image"
                            tools:text="34°C" />

                        <TextView
                            android:id="@+id/current_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:text="@{viewModel.uiState.weather.currentWeatherData.weatherDesc }"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="@id/current_temp"
                            app:layout_constraintStart_toEndOf="@id/current_temp"
                            app:layout_constraintTop_toTopOf="@+id/current_temp"
                            tools:text="Overcast" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="0dp"
                                android:paddingEnd="8dp"
                                android:text="@string/pressure"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toStartOf="@id/current_pressure_image"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/current_pressure_image"
                                android:layout_width="25sp"
                                android:layout_height="22dp"
                                android:contentDescription="@null"
                                android:src="@drawable/ic_pressure"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:tint="@color/md_theme_onSurface" />

                            <TextView
                                android:id="@+id/current_pressure_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="4dp"
                                android:paddingTop="4dp"
                                android:paddingEnd="4dp"
                                android:paddingBottom="8dp"
                                android:text="@{viewModel.uiState.weather.currentWeatherData.pressure + `hpa`}"
                                android:textSize="16sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/current_pressure_image"
                                tools:text="1018 hpa" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="0dp"
                                android:paddingEnd="8dp"
                                android:text="@string/humidity"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toStartOf="@id/current_humidity_image"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@id/current_humidity_image" />

                            <ImageView
                                android:id="@+id/current_humidity_image"
                                android:layout_width="25sp"
                                android:layout_height="25sp"
                                android:contentDescription="@null"
                                android:src="@drawable/ic_drop"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/current_pressure_label"
                                app:tint="@color/md_theme_onSurface" />

                            <TextView
                                android:id="@+id/current_humidity_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="4dp"
                                android:paddingTop="4dp"
                                android:paddingEnd="4dp"
                                android:paddingBottom="8dp"
                                android:text="@{viewModel.uiState.weather.currentWeatherData.humidity + `%`}"
                                android:textSize="16sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/current_humidity_image"
                                tools:text="90%" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toStartOf="@id/current_wind_speed_image"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@id/current_wind_speed_image" />

                            <ImageView
                                android:id="@+id/current_wind_speed_image"
                                android:layout_width="25sp"
                                android:layout_height="25sp"
                                android:contentDescription="@null"
                                android:paddingStart="0dp"
                                android:paddingEnd="8dp"
                                android:src="@drawable/ic_wind"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/current_humidity_label"
                                app:tint="@color/md_theme_onSurface" />

                            <TextView
                                android:id="@+id/current_wind_speed_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="4dp"
                                android:paddingTop="4dp"
                                android:paddingEnd="4dp"
                                android:text="@{viewModel.uiState.weather.currentWeatherData.windSpeed + `m/s`}"
                                android:textSize="16sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/current_wind_speed_image"
                                tools:text="5m/s" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/today_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/today_label"
                    android:textSize="20sp"
                    app:isErrorNull="@{viewModel.uiState.error}"
                    app:isLoading="@{viewModel.uiState.isLoading}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/current_day" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/today_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:isErrorNull="@{viewModel.uiState.error}"
                    app:isLoading="@{viewModel.uiState.isLoading}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/today_label"
                    app:setAdapter="@{today_adapter}"
                    tools:listitem="@layout/item_hourly_weather" />

                <TextView
                    android:id="@+id/next_days_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/next_days"
                    android:textSize="20sp"
                    app:isErrorNull="@{viewModel.uiState.error}"
                    app:isLoading="@{viewModel.uiState.isLoading}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/today_recycler_view" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:isErrorNull="@{viewModel.uiState.error}"
                    app:isLoading="@{viewModel.uiState.isLoading}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/next_days_label"
                    app:setAdapter="@{next_days_adapter}"
                    tools:listitem="@layout/item_next_days" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:isLoading="@{!viewModel.uiState.isLoading}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableTopCompat="@drawable/ic_baseline_network_check_24"
                    android:text="@{viewModel.uiState.error}"
                    android:textAlignment="center"
                    android:textColor="@color/md_theme_error"
                    android:textSize="24sp"
                    app:errorVisibility="@{viewModel.uiState.error}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>